k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctdk8sinventorytracker
  namespace: ct-aws-dk8s

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ctdk8sinventorytracker

  template:
    metadata:
      labels:
        app: ctdk8sinventorytracker

    spec:
      containers:
      - name: ctdk8sinventorytracker
        image: ctendongho/ctdk8sinventorytracker:v1
        ports:
        - containerPort: 5000
